kubernetes/main/apps/kube-system/cilium/gateway/cilium.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-external
  namespace: networking
  # annotations:
  #   external-dns.alpha.kubernetes.io/target: external.garb.dev
  #   external-dns.alpha.kubernetes.io/hostname: external.garb.dev
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.40.24"
    # - type: "Hostname"
    #   value: "external.garb.dev"
  infrastructure:
    annotations:
      # when using gateway-apis in cilium it also creates a service
      # with a different name and tries to take this IP.
      # the problem is the service created by cilium is not the one used by envoy.
      # therefore, the service is disabled
      lbipam.cilium.io/ips: 192.168.40.24
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-internal
  namespace: networking
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.40.25"
    # - type: "Hostname"
    #   value: "internal.garb.dev"
  infrastructure:
    annotations:
      # external-dns.alpha.kubernetes.io/hostname: internal.garb.dev
      lbipam.cilium.io/ips: 192.168.40.25
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
